# toolkid

./: CMakeLists.txt  FindGSL.cmake  README.md
src/aam/: CMakeLists.txt  ProcrustesAlignmentFilter.cxx  itkImagePCAShapeModelEstimatorTest.cxx  itkVTKImageIOTest.cxx
src/ap/: CMakeLists.txt  affinityPropagation.cpp
src/atlas/: CMakeLists.txt  png2nii.cpp  sva2volume.cpp
src/bandpass/: CMakeLists.txt  bandpass.cpp  linearregression.cpp  meanregression.cpp  removemean.cpp  rsfilter.cpp  spectrum.cpp
src/bayesian_dti/: CMakeLists.txt  bayesianDTI.cpp
src/bolus/: CMakeLists.txt  bolus_svd.cpp
src/colormap/: CMakeLists.txt  colormap.cpp  colormap.h  fire.txt  old.fire.txt
src/count/: CMakeLists.txt  printcoordinates.cpp  voxelcount.cpp
src/cqp/: CMakeLists.txt  ConstrainedQuadraticProgramming.cpp  ConstrainedQuadraticProgramming.h  gsl_cqp.c  gsl_cqp.h  initial_point.c  initial_point.h  main.cpp  mg_pdip.c
src/crop/: CMakeLists.txt  Crop.cpp  Crop.h  clearregion.cpp  crop.cpp  cropf3.cpp  cropf3mask.cpp  multicrop.cpp
src/dkifit/: CMakeLists.txt  TestIndex.cpp  dkiOptimizeFunction.cpp  dkiOptimizeFunction.h  dkifitCommon.cpp  dkifitCommon.h  dkifit_RESTORE.cpp  dkifit_constrained.cpp  dkifit_linear.cpp  dkifit_nonlinear.cpp  dkimaps.cpp  quantile.hpp  std_vector_to_vnl_vector.h  vnl_vector_to_std_vector.h
src/dkifit/matlab/: dki_table_indices.mat  f1_tabesh.m  f2_tabesh.m  g1_tabesh.m  g2_tabesh.m  get_dki_params_tabesh_1.m  sc_make_dki_indices.m
src/dtiresample/: CMakeLists.txt  dtiresample.cpp
src/dynamics/: CMakeLists.txt  dynamics.cpp
src/eeg/: CMakeLists.txt  extractSeries.cpp  txt2nii.cpp
src/em/: CMakeLists.txt  Readme.txt  em.cpp  test.cpp
src/fcg/: CMakeLists.txt  clustercoefficient.cpp  connectivitymatrix.cpp  fcmap.cpp  fwsp.cpp  hierarchy.cpp  indices.cpp  matrix2csv.cpp  pli.cpp  randomizegraph.cpp  rinversematrix.cpp  rinversematrix.h  rmaptoz.cpp  rmatrix.cpp  rmatrix.h  rsCommon.cpp  rsCommon.h  rsConnectivityMatrix.cpp  rsConnectivityMatrix.h  rsPCA.cpp  rsPCA.h  rtoz.cpp  strengths.cpp
src/flens/: CMakeLists.txt  README  array.h  array.tcc  bandstorage.h  blas.cc  blas.h  blas_flens.h  blas_flens.tcc  cg.h  cg.tcc  complex_helper.cc  complex_helper.h  crs.h  crs.tcc  densevector.h  densevector.tcc  evalclosure.h  evalclosure.tcc  flens.h  fullstorage.h  fullstorage.tcc  generalmatrix.h  generalmatrix.tcc  generic_blas.h  generic_blas.tcc  hacksforgmpxx.h  id.cc  id.h  id.tcc  lapack.cc  lapack.h  lapack_flens.h  lapack_flens.tcc  listinitializer.h  matvec.h  matvecclosures.h  matvecio.h  matvecoperations.h  multigrid.h  (+21 more)
src/generallinearmodel/: CMakeLists.txt  generallinearmodel.cpp  wisdom3.txt
src/glm/: CMakeLists.txt  covariates.txt  glm.cpp
src/glmm/: CMakeLists.txt  glmmSelectVoxels.cpp
src/graphs/: CMakeLists.txt  DenseVector.cpp  Kmeans.cpp  SparseVector.h  Utils.h  Vector.h  VectorFactory.cpp  betweenness.cpp  clusteringcoefficient.cpp  createRegular.cpp  createSmallWorld.cpp  degree.cpp  discreteEntropy.cpp  export.cpp  graphCommon.cpp  graphCommon.h  hierarchy.cpp  histogram.cpp  imagehistogram.cpp  laplacian.cpp  list2image.cpp  minimumspanningtree.cpp  powerlawCommon.cpp  powerlawCommon.h  powerlawFit.cpp  segmentationCombiner.cpp  simplehistogram.cpp  spectralMatrix.cpp  spectralMatrix.h  synchronizability.cpp  test.cpp  threshold.cpp  vgmap.cpp  visabilitygraph.cpp
src/hrffit/: CMakeLists.txt  main.cpp  nrGamma.cpp  nrGamma.h  tkdFitGammaHRF.cpp  tkdFitGammaHRF.h  tkdGammaHRF.cpp  tkdGammaHRF.h  tkdHRFFit.cpp  tkdHRFFit.h  tkdStimulus.h
src/isodata/: CMakeLists.txt  Image.cc  Image.h  IsoClus.cc  IsoDataImage.cpp  Point.cpp  Point.h  isodata.cpp
src/kmeans/: CMakeLists.txt  KM_ANN.cpp  KM_ANN.h  KMeans.cpp  KMeans.h  KMrand.cpp  cluster_quality.h
src/kmeans/src/: DenseVector.h  Kmeans.cpp  Kmeans.h  SimpleKmeans.cpp  SimpleKmeans.h  SparseVector.cpp  Utils.cpp  VectorFactory.h  main.cpp
src/knn/: CMakeLists.txt  ann.cpp  annBorderDistance.cpp  annClassify.cpp  annClustering.cpp  annCommon.cpp  annCommon.h  annFindOptimalClustering.cpp  annMax.cpp  annMinConnectedComponent.cpp  annModularity.cpp  annRelabel.cpp  annRelabel.h  annSimilarity.cpp  annStats.cpp  annTrain.cpp  bootstrap.cpp  isodata.cpp  itkLabelGeometryImageFilterTest.cxx  relabel.cpp  resample.sh
src/knn/isodata_src/: IsoData.cpp  IsoData.h  KCtree.cpp  KCtree.h  KCutil.cpp  KCutil.h  KM_ANN.cpp  KM_ANN.h  KMcenters.cpp  KMcenters.h  KMdata.cpp  KMdata.h  KMeans.cpp  KMeans.h  KMfilterCenters.cpp  KMfilterCenters.h  KMrand.h  Point.cpp  Point.h
src/mrfit/: CMakeLists.txt  itkMRT1ParameterMap3DImageFilter.h  itkMRT1ParameterMap3DImageFilter.txx  itkMRT2ParameterMap3DImageFilter.h  itkMRT2ParameterMap3DImageFilter.txx  looklocker.cpp  looklocker.h  mrfitCommon.cpp  mrfitCommon.h  t1map.cpp  t1map_looklocker.cpp  t2map.cpp
src/processing/: CMakeLists.txt  binaryRelabel.cpp  checkerboard.cpp  circularshift.cpp  cog4D.cpp  convert.cpp  copyinfo.cpp  diffusionFilter.cpp  euclidean.cpp  extract.cpp  getMaxDim.cpp  histogram.cpp  imageSize.cpp  itkBigMetaImageIO.cpp  itkBigMetaImageIO.h  little2bigendian.cpp  mean.cpp  removeMinima.cpp  rescale.cpp
src/procfid/: CMakeLists.txt  data.h  fidCommon.cpp  fidCommon.h  fidEPITools.cpp  fidEPITools.h  fidFID.cpp  fidFID.h  fidFIDImpl.h  fidFIDReader.cpp  fidFIDReader.h  fidFourier.cpp  fidFourier.h  proc3d.cpp  procepi.cpp  procfsems.cpp  procgems.cpp  proclooklocker.cpp  procmems.cpp  procmsepi.cpp  procmsepilc.cpp  procmsepilcc.cpp  procmshotepilc.m  procmsme.cpp
src/rbmview/: CMakeLists.txt  main.cpp  moc_rbmImagePlane.cxx  moc_rbmTest.cxx  moc_rbmThreeView.cxx  moc_rbmView.cxx  rbmImage.cpp  rbmImage.h  rbmImageInteractor.cpp  rbmImageInteractor.h  rbmImagePlane.cpp  rbmImagePlane.h  rbmImagePlane.ui  rbmInteractorStyle.cpp  rbmInteractorStyle.h  rbmPlotCurve.cpp  rbmPlotCurve.h  rbmPlotData.cpp  rbmPlotData.h  rbmPlotter.cpp  rbmPlotter.h  rbmTest.h  rbmThreeView.cpp  rbmThreeView.h  rbmThreeView.ui  rbmView.cpp  rbmView.h  rbmView.ui  ui_rbmImagePlane.h  ui_rbmThreeView.h  ui_rbmView.h
(+216 files in other folders)
