project( flens )

include_directories( . )

add_library(
flens
array.h
array.tcc
bandstorage.h
bandstorage.tcc
blas.cc
blas_flens.h
blas_flens.tcc
blas.h
blas.tcc
cg.h
cg.tcc
complex_helper.cc
complex_helper.h
crs.h
crs.tcc
densevector.h
densevector.tcc
evalclosure.h
evalclosure.tcc
flens.h
fullstorage.h
fullstorage.tcc
generalmatrix.h
generalmatrix.tcc
generic_blas.h
generic_blas.tcc
hacksforgmpxx.h
id.cc
id.h
id.tcc
lapack.cc
lapack_flens.h
lapack_flens.tcc
lapack.h
listinitializer.h
listinitializer.tcc
macros.h
matvecclosures.h
matvecclosures.tcc
matvec.h
matvecio.h
matvecio.tcc
matvecoperations.h
matvecoperations.tcc
matvec.tcc
multigrid.h
multigrid.tcc
packedstorage.h
packedstorage.tcc
polynom.h
polynom.tcc
range.cc
range.h
range.tcc
refcounter.cc
refcounter.h
refcounter.tcc
result.h
snapshot.cc
snapshot.h
sparse_blas.cc
sparse_blas_flens.h
sparse_blas_flens.tcc
sparse_blas.h
sparsematrix.h
sparsematrix.tcc
storage.h
symmetricmatrix.h
symmetricmatrix.tcc
traits.h
triangularmatrix.h
triangularmatrix.tcc
underscore.cc
underscore.h
uplo.h
uplo.tcc
)
